# Torchlet

./: .gitignore  CHANGELOG.md  LICENSE  README.md  demo.ipynb  pyproject.toml
.github/workflows/: pylint.yml  test.yaml
scripts/: toy_mlp.py
test/: math_tests.py  strategies.py  tensor_strategies.py  test_data.py  test_engine.py  test_functions.py  test_matmul.py  test_nn.py  test_no_grad.py  test_optim.py  test_tensor.py  test_tensor_data.py  test_tensor_indexing.py
test/nn/: test_layers.py  test_sequential.py
test/optim/: test_sgd.py
torchlet/: __init__.py  _tensor.py  autodiff.py  data.py  dev_utils.py  engine.py  functions.py  nn.py  nn_tensor.py  scalar_ops.py  tensor.py  tensor_data.py  tensor_functions.py  tensor_ops.py
torchlet/nn/: __init__.py  activations.py  base.py  containers.py  layers.py  module.py  sequential.py
torchlet/optim/: __init__.py  base.py  optimizer.py  sgd.py
