[tool.poetry]
name = "torchlet"
version = "0.1.0"
description = "A small, minimalist variant of PyTorch."
authors = ["Cem Alpturk <cem.alpturk@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
numpy = "^2.0.1"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
