[tool.poetry]
name = "torchlet"
version = "0.1.0"
description = "A small, minimalist variant of PyTorch."
authors = ["Cem Alpturk <cem.alpturk@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
numpy = "^2.0.1"


[tool.poetry.group.dev]
optional = true


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.2"
graphviz = "^0.20.3"
hypothesis = "^6.115.3"


[tool.poetry.group.extras]
optional = true

[tool.poetry.group.extras.dependencies]
matplotlib = "^3.9.2"
tqdm = "^4.66.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
